platforms/flutter/src/flutter_colyseus.h

/**
 * Toggle inbound-traffic serialization (default on).
 *
 * When on, every room's transport is wrapped at join so inbound frames decode
 * inside colyseus_netdelay_pump() on the calling (Dart) thread rather than on
 * the WebSocket thread. Turn it off only for a client that never touches the
 * predict layer and drives no per-frame pump.
 *
 * Takes effect for rooms joined after the call.
 */
FLUTTER_EXPORT void colyseus_flutter_set_serialized_inbound(int enabled);
/**
 * Get array element as string
 */
FLUTTER_EXPORT const char* colyseus_flutter_message_array_element_string(int index);
/**
 * Get array element as number
 */
FLUTTER_EXPORT double colyseus_flutter_message_array_element_number(int index);
// =============================================================================
// State / Schema Access Functions
// =============================================================================

/**
 * Get the root state pointer for a room
 * @return State instance handle (0 if not available)
 */
FLUTTER_EXPORT intptr_t colyseus_flutter_room_get_state(int room_handle);
/**
 * Get a string field from a schema instance
 */
FLUTTER_EXPORT const char* colyseus_flutter_schema_get_string(intptr_t instance_handle, const char* field_name);
/**
 * Get a numeric field from a schema instance
 */
FLUTTER_EXPORT double colyseus_flutter_schema_get_number(intptr_t instance_handle, const char* field_name);
/**
 * Get the field type of a schema field
 * @return Field type enum value, or -1 if not found
 */
FLUTTER_EXPORT int colyseus_flutter_schema_get_field_type(intptr_t instance_handle, const char* field_name);
/**
 * Get a map value by key from a schema map field
 * @return Instance handle of the map item (0 if not found)
 */
FLUTTER_EXPORT intptr_t colyseus_flutter_map_get(intptr_t instance_handle, const char* field_name, const char* key);
// =============================================================================
// Callbacks Functions (Schema state change listeners)
// =============================================================================

/**
 * Create a callbacks manager for a room
 * @param room_handle Room reference handle
 * @return Callbacks handle (0 on failure)
 */
FLUTTER_EXPORT intptr_t colyseus_flutter_callbacks_create(int room_handle);
/**
 * Free a callbacks manager
 */
FLUTTER_EXPORT void colyseus_flutter_callbacks_free(intptr_t callbacks_handle);
/**
 * Remove a specific callback by handle
 */
FLUTTER_EXPORT void colyseus_flutter_callbacks_remove_handle(intptr_t callbacks_handle, int callback_handle);
/**
 * Listen to property changes on a schema instance
 * @param callbacks_handle Callbacks manager handle
 * @param instance_handle Schema instance (0 for root state)
 * @param property Property name
 * @return Callback handle for unsubscription, or -1 on failure
 */
FLUTTER_EXPORT int colyseus_flutter_callbacks_listen(intptr_t callbacks_handle, intptr_t instance_handle, const char* property);
/**
 * Listen to collection item additions
 * @return Callback handle, or -1 on failure
 */
FLUTTER_EXPORT int colyseus_flutter_callbacks_on_add(intptr_t callbacks_handle, intptr_t instance_handle, const char* property);
/**
 * Listen to collection item removals
 * @return Callback handle, or -1 on failure
 */
FLUTTER_EXPORT int colyseus_flutter_callbacks_on_remove(intptr_t callbacks_handle, intptr_t instance_handle, const char* property);