platforms/flutter/colyseus_flutter/lib/src/bindings/native_functions.dart


  late final messageArrayElementString = _lib.lookupFunction<
      Pointer<Utf8> Function(Int32),
      Pointer<Utf8> Function(int)>('colyseus_flutter_message_array_element_string');

  late final messageArrayElementNumber = _lib.lookupFunction<
      Double Function(Int32),
      double Function(int)>('colyseus_flutter_message_array_element_number');

  // ===== State / Schema =====

  late final roomGetState = _lib.lookupFunction<
      IntPtr Function(Int32),
      int Function(int)>('colyseus_flutter_room_get_state');

  late final schemaGetString = _lib.lookupFunction<
      Pointer<Utf8> Function(IntPtr, Pointer<Utf8>),
      Pointer<Utf8> Function(int, Pointer<Utf8>)>('colyseus_flutter_schema_get_string');

  late final schemaGetNumber = _lib.lookupFunction<
      Double Function(IntPtr, Pointer<Utf8>),
      double Function(int, Pointer<Utf8>)>('colyseus_flutter_schema_get_number');

  late final schemaGetFieldType = _lib.lookupFunction<
      Int32 Function(IntPtr, Pointer<Utf8>),
      int Function(int, Pointer<Utf8>)>('colyseus_flutter_schema_get_field_type');

  late final mapGet = _lib.lookupFunction<
      IntPtr Function(IntPtr, Pointer<Utf8>, Pointer<Utf8>),
      int Function(int, Pointer<Utf8>, Pointer<Utf8>)>('colyseus_flutter_map_get');

  // ===== Callbacks =====

  late final callbacksCreate = _lib.lookupFunction<
      IntPtr Function(Int32),
      int Function(int)>('colyseus_flutter_callbacks_create');

  late final callbacksFree = _lib.lookupFunction<
      Void Function(IntPtr),
      void Function(int)>('colyseus_flutter_callbacks_free');

  late final callbacksRemoveHandle = _lib.lookupFunction<
      Void Function(IntPtr, Int32),
      void Function(int, int)>('colyseus_flutter_callbacks_remove_handle');

  late final callbacksListen = _lib.lookupFunction<
      Int32 Function(IntPtr, IntPtr, Pointer<Utf8>),
      int Function(int, int, Pointer<Utf8>)>('colyseus_flutter_callbacks_listen');

  late final callbacksOnAdd = _lib.lookupFunction<
      Int32 Function(IntPtr, IntPtr, Pointer<Utf8>),
      int Function(int, int, Pointer<Utf8>)>('colyseus_flutter_callbacks_on_add');

  late final callbacksOnRemove = _lib.lookupFunction<
      Int32 Function(IntPtr, IntPtr, Pointer<Utf8>),
      int Function(int, int, Pointer<Utf8>)>('colyseus_flutter_callbacks_on_remove');

  // ===== Extras: room bridge =====

  /// The core `colyseus_room_t*` behind a glue room ref (0 when unresolved).
  late final roomPtr = _lib.lookupFunction<
      IntPtr Function(Int32),
      int Function(int)>('colyseus_flutter_room_ptr');

  late final setSerializedInbound = _lib.lookupFunction<
      Void Function(Int32),
      void Function(int)>('colyseus_flutter_set_serialized_inbound');

  /// Wraps colyseus_select_by_latency so the winning endpoint reaches Dart as
  /// an owned copy — the core's own string is gone by the time an async
  /// listener callback runs.
  late final selectByLatency = _lib.lookupFunction<
      Void Function(Pointer<Pointer<Char>>, Int32, Int32, Int32, Int32,
          Pointer<NativeFunction<Void Function(Pointer<Char>, Double)>>),
      void Function(Pointer<Pointer<Char>>, int, int, int, int,
          Pointer<NativeFunction<Void Function(Pointer<Char>, Double)>>)>(
      'colyseus_flutter_select_by_latency');

  late final freeString = _lib.lookupFunction<
      Void Function(Pointer<Char>),
      void Function(Pointer<Char>)>('colyseus_flutter_free_string');

  // ===== Extras: field access =====
  //
  // Resolve a name once, then read/write through (type, offset, index).
  // The accessors are leaf calls — no Dart callback can run underneath them.

  late final fieldResolve = _lib.lookupFunction<
      Int32 Function(IntPtr, Pointer<Utf8>, Pointer<Int32>, Pointer<Int32>),
      int Function(int, Pointer<Utf8>, Pointer<Int32>, Pointer<Int32>)>(
      'colyseus_flutter_field_resolve');

  /// The instance's own vtable — reflection schemas have no static one.
  late final instanceVtable = _lib.lookupFunction<
      IntPtr Function(IntPtr),
      int Function(int)>('colyseus_flutter_instance_vtable', isLeaf: true);

  late final fieldCount = _lib.lookupFunction<
      Int32 Function(IntPtr),
      int Function(int)>('colyseus_flutter_field_count', isLeaf: true);

  late final fieldNameAt = _lib.lookupFunction<
      Pointer<Utf8> Function(IntPtr, Int32),
      Pointer<Utf8> Function(int, int)>('colyseus_flutter_field_name_at');

  late final fieldGetNumber = _lib.lookupFunction<
      Double Function(IntPtr, Int32, Int32, Int32),
      double Function(int, int, int, int)>(
      'colyseus_flutter_field_get_number', isLeaf: true);

  late final fieldSetNumber = _lib.lookupFunction<
      Void Function(IntPtr, Int32, Int32, Int32, Double),
      void Function(int, int, int, int, double)>(
      'colyseus_flutter_field_set_number', isLeaf: true);

  late final fieldGetString = _lib.lookupFunction<
      Pointer<Utf8> Function(IntPtr, Int32, Int32),
      Pointer<Utf8> Function(int, int, int)>('colyseus_flutter_field_get_string');

  late final fieldGetRef = _lib.lookupFunction<
      IntPtr Function(IntPtr, Int32, Int32),
      int Function(int, int, int)>(
      'colyseus_flutter_field_get_ref', isLeaf: true);

  // ===== Extras: collections =====
  //
  // Maps are uthash-backed with no ordinal accessor, so iteration snapshots
  // the collection into a native scratch buffer that is then read by ordinal.
  // A snapshot is only valid until the next decode.

  late final collectionSnapshot = _lib.lookupFunction<
      Int32 Function(IntPtr, Int32),
      int Function(int, int)>('colyseus_flutter_collection_snapshot');

  late final collectionHasSchemaChild = _lib.lookupFunction<
      Int32 Function(),
      int Function()>(
      'colyseus_flutter_collection_has_schema_child', isLeaf: true);

  late final collectionPrimitiveType = _lib.lookupFunction<
      Int32 Function(),
      int Function()>(
      'colyseus_flutter_collection_primitive_type', isLeaf: true);

  late final collectionEntryKey = _lib.lookupFunction<
      Pointer<Utf8> Function(Int32),
      Pointer<Utf8> Function(int)>('colyseus_flutter_collection_entry_key');

  late final collectionEntryIndex = _lib.lookupFunction<
      Int32 Function(Int32),
      int Function(int)>(
      'colyseus_flutter_collection_entry_index', isLeaf: true);

  late final collectionEntryRef = _lib.lookupFunction<
      IntPtr Function(Int32),
      int Function(int)>(
      'colyseus_flutter_collection_entry_ref', isLeaf: true);

  late final collectionEntryNumber = _lib.lookupFunction<
      Double Function(Int32),
      double Function(int)>(
      'colyseus_flutter_collection_entry_number', isLeaf: true);

  late final collectionEntryString = _lib.lookupFunction<
      Pointer<Utf8> Function(Int32),
      Pointer<Utf8> Function(int)>('colyseus_flutter_collection_entry_string');

  late final collectionGet = _lib.lookupFunction<
      IntPtr Function(IntPtr, Int32, Pointer<Utf8>, Int32),
      int Function(int, int, Pointer<Utf8>, int)>('colyseus_flutter_collection_get');

  late final collectionCount = _lib.lookupFunction<
      Int32 Function(IntPtr, Int32),
      int Function(int, int)>(
      'colyseus_flutter_collection_count', isLeaf: true);

  late final collectionContains = _lib.lookupFunction<
      Int32 Function(IntPtr, Pointer<Utf8>),
      int Function(int, Pointer<Utf8>)>('colyseus_flutter_collection_contains');
}
